--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --borderRadius: 32px;
+}
+
 html,
 body,
 main {
@@ -15,7 +19,34 @@ main {
 }
 
 .container {
-    width: 736px;
-    height: 512px;
-    border: solid 1px #ccc;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 420px) {
+    .container {
+        flex-direction: row;
+        width: 736px;
+        height: 512px;
+    }
+}
+
+.result {
+    display: inline-block;
+    border-radius: 0 0 var(--borderRadius) var(--borderRadius);
+    border: solid 1px #1d6e07;
+}
+
+@media (min-width: 420px) {
+    .result {
+        width: 50%;
+        border-radius: var(--borderRadius);
+    }
+}
+
+.summary {
+    flex-grow: 1;
+    border: solid 1px #07216e;
 }
