--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     --border-radius: 32px;
 }
 
+@font-face {
+    font-family: Hanken Grotesk;
+    src: url("./assets/fonts/HankenGrotesk-VariableFont_wght.ttf")
+}
+
 html,
 body,
 main {
@@ -25,6 +30,7 @@ main {
     width: 100%;
     height: 100%;
     background-color: #fff;
+    font-family: "Hanken Grotesk";
 }
 
 @media (min-width: 420px) {
