--- a/styles.css
+++ b/styles.css
@@ -239,3 +239,20 @@ main {
 .criteria-score-total {
     opacity: .5;
 }
+
+.continue-button {
+    margin-top: 24px;
+    padding: 17px 0 16px 0;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #303b59;
+    border-radius: 128px;
+}
+
+@media (min-width: 420px) {
+    .continue-button {
+        margin-top: 41px;
+    }
+}
