--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ main {
     color: var(--color-light-blue);
     background: linear-gradient(180deg, #75f 0%, #6943ff 0.01%, #2f2ce9 100%);
     border-radius: 0 0 var(--border-radius) var(--border-radius);
+    box-shadow: 0 30px 60px rgba(60.93, 107.87, 235.88, 0.15);
 }
 
 @media (min-width: 420px) {
@@ -70,6 +71,7 @@ main {
         width: 50%;
         padding: 38px 54px 55px 54px;
         border-radius: var(--border-radius);
+        box-shadow: none;
     }
 }
 
